--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/practica_responsive_design/assets/styles.css" />
+    <link rel="stylesheet" href="/assets/styles.css" />
     <title>Landing Page</title>
   </head>
   <body>
